Add google analytics

--- a/web-marketing-verona/index.html
+++ b/web-marketing-verona/index.html
@@ -2,6 +2,16 @@
 <html lang="it">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157587155-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-157587155-1');
+  </script>
+
 
   <meta charset="UTF-8">
   <title>Web Marketing Verona | Digital Agency | Wave Digital</title>
