--- a/siti-internet-verona/index.html
+++ b/siti-internet-verona/index.html
@@ -134,6 +134,31 @@
     </div>
   </header>
 
+  <section class="features" id="features">
+    <div class="container">
+      <div class="section-heading">
+        <h2 class="text-center">Creazione di Siti Internet Verona</h2><br>
+        <p class="text-home">Siamo tra le <b>migliori web agency a Verona per la creazione di siti web</b> moderni, veloci ed affidabili con elevata qualità professionale. <br><br>
+          Siamo un Team di giovani professionisti che lavorano da sempre nel digitale. <b>Cerchiamo di valorizzare al meglio la tua attività</b> e la tua presenza online con  un sito web che rispecchi al meglio la tua immagine coordinata. <br><br>          
+          Per poter creare un sito web professionale e di qualità occorre tener presente molti aspetti importanti e seguire il progetto in tutte in diverse fasi. Nel nostro team ogni professionista è specializzato in ogni fase di creazione: Grafica, Sviluppo, Posizionamento e Marketing.
+          <br><br><span class="">Un sito non deve essere solo bello, deve convertire!</span><br><br>
+          Cosa significa convertire? Significa che già dallo sviluppo della grafica occorre tener presente della user friendly e dell'ottimizzazione del nostro obiettivo ovvero acquisire un contatto, una richiesta di preventivo, una vendita ecc.
+          <br><br>Per user friendly significa ottimizzare il sito per renderlo il più facile possibile da leggere e navigare. Un potenziale cliente che entra nel nostro sito deve riuscire a trovare nel minor tempo possibile quello che gli interessa e deve completare il nostro obiettivo.
+          <br><br><b>Gli aspetti da considerare per un buon sito:</b>
+          <br><br><b>- Ottimizzato per i dispositivi mobile</b>
+          <br>Al giorno d'oggi il 68% delle ricerche avviene da mobile ed è fondamentale che il nostro sito sia ottimizzato correttamente
+          <br><br><b>- Ottimizzato per l'indicizzazione sui motori di ricerca</b>
+          <br> Occorre seguire il sito in tutti gli aspetti per l'ottimizzaizone per i motori di ricerca come Google e Bing; ottimizzare i metatag, le immagini, i testi ecc
+          <br><br><b>- Rispecchiare al meglio l'identità aziendale</b>
+          <br> Un sito ben fatto dovrebbe riportare al meglio la tua identià aziendale reale e migliorarla
+          <br><br><b>- Facile da gestire e mantenere</b>
+          <br>Molto importante è la facilità con il quale è possibile mantenere aggiornato un sito; inserire news, immagini, modificare testi ecc.
+        </p><br><br><br>
+        <h2 class="text-center">Richiedici Gratuitamente un'analisi del tuo sito</h2><br>
+      </div>
+    </div>
+  </section>
+
     <!--SEZIONE CONTATTACI -->
 
     <section class="features" id="contact">
