Aggiunto testo seo agency

--- a/seo-agency-verona/index.html
+++ b/seo-agency-verona/index.html
@@ -144,6 +144,30 @@
     </div>
   </header>
 
+  <section class="features" id="features">
+    <div class="container">
+      <div class="section-heading">
+        <h2 class="text-center">SEO Agency Verona</h2><br>
+        <p class="text-home">
+          Wave Digital, la SEO agency a Verona per posizionale al meglio il tuo sito web sui motori di ricerca.<br><br>
+          Raccontaci la tua azienda, spiegaci di cosa ti occupi e quali risultati vuoi raggiungere. Un nostro consulente SEO individuerà insieme ù
+          a te la strategia che più si adatta al caso tuo. <br><br>
+          <b>Fatti trovare da molti nuovi potenziali clienti interessati ai tuoi prodotti o servizi! Aumenta ora i tuoi affari!</b>
+        </p><br><br>
+        <h2 class="text-center">I nostri servizi - SEO Agency Verona</h2><br>
+        <p class="text-home">
+          <b>- Keyword Research</b><br>
+          Ricerchiamo le migliori parole chiave, più cercate dai tuoi potenziali clienti, relative al tuo business<br><br>
+          <b>- Content Optimization</b><br><br>
+          <b>- Technical SEO</b><br><br>
+          <b>- Link Building</b><br><br>
+        </p>
+
+        <h2 class="text-center">Richiedici Gratuitamente un'analisi del tuo sito</h2><br>
+      </div>
+    </div>
+  </section>
+
   
     <!--SEZIONE CONTATTACI -->
 
