--- a/seo-agency-verona/index.html
+++ b/seo-agency-verona/index.html
@@ -83,7 +83,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Wave Digital</a>
+      <a class="navbar-brand js-scroll-trigger" href="/">Wave Digital</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -201,6 +201,92 @@
     <div class="container text-center">
       <span>Copyright &copy; Wave Digital 2020 - <a href="/privacy/">Policy privacy</a></span>
     </div>
+
+    <!-- Footer -->
+  <footer class="page-footer font-small blue pt-4">
+
+    <!-- Footer Links -->
+    <div class="container-fluid text-center text-md-left">
+
+      <!-- Grid row -->
+      <div class="row">
+
+        <!-- Grid column -->
+        <div class="col-md-6 mt-md-0 mt-3">
+
+          <!-- Content -->
+          <h5 class="text-uppercase">WEB AGENCY VERONA - WAVE DIGITAL</h5>
+          <p>Contattaci per un preventivo gratuito</p><br>
+          <h5><a href="tel:+393486983468">+39 348 6983468</a></h5>
+          <h5><a href="mailto:info@wavedigital.it ">info@wavedigital.it</a></h5>
+
+        </div>
+        <!-- Grid column -->
+
+        <hr class="clearfix w-100 d-md-none pb-3">
+
+        <!-- Grid column -->
+        <div class="col-md-3 mb-md-0 mb-3">
+
+          <!-- Links -->
+          <h5 class="text-uppercase">Servizi</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <a href="/siti-internet-verona/">Siti Internet Verona</a>
+            </li>
+            <li>
+              <a href="/seo-agency-verona/">SEO Agency Verona</a>
+            </li>
+            <li>
+              <a href="/web-marketing-verona/">Web Marketing Verona</a>
+            </li>
+            <li>
+              <a href="/">Web Agency Verona</a>
+            </li>
+          </ul>
+
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 mb-md-0 mb-3">
+
+          <!-- Links -->
+          <h5 class="text-uppercase">Servizi</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!">Campagne Google ADS Verona</a>
+            </li>
+            <li>
+              <a href="#!">Facebook ADS Verona</a>
+            </li>
+            <li>
+              <a href="#!">Creazione siti per B&B</a>
+            </li>
+            <li>
+              <a href="#!">Creazione siti per Ristoranti</a>
+            </li>
+          </ul>
+
+        </div>
+        <!-- Grid column -->
+
+      </div>
+      <!-- Grid row -->
+
+    </div>
+    <!-- Footer Links -->
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+      <a href="https://wavedigital.it"> Web Agency Verona</a> - Wave Digital
+    </div>
+    <!-- Copyright -->
+
+  </footer>
+  <!-- Footer -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
