--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157587155-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-157587155-1');
@@ -145,23 +145,27 @@
   <section class="features" id="features">
     <div class="container">
       <div class="section-heading">
-        <h2 class="text-center">Tantissime soluzioni per la tua Azienda<br><span class="web-agency">Web Agency Verona</span></h2>
-        <p class="text-home">Siamo una delle migliori <b>Web Agency a Verona</b> di giovani professionisti appassionati di digitale.<br><br>
-          Siamo specializzati nella <b>creazione su misura di servizi digitali</b> sviluppati con le più moderne e avanzate
+        <h2 class="text-center">Tantissime soluzioni per la tua Azienda<br><span class="web-agency">Web Agency
+            Verona</span></h2>
+        <p class="text-home">Siamo una delle migliori <b>Web Agency a Verona</b> di giovani professionisti appassionati
+          di digitale.<br><br>
+          Siamo specializzati nella <b>creazione su misura di servizi digitali</b> sviluppati con le più moderne e
+          avanzate
           strategie
           di web design, digital marketing, social media marketing, creazione e sviluppo di siti web ed ecommerce con
           cms proprietari.<br><br>
           Grazie alla nostra esperienza sapremo realizzare insieme a te un sito web in grado di portare <b>risultati e
-          generare vendite o contatti.</b>
+            generare vendite o contatti.</b>
           Ogni progetto parte da un'attenta analisi della tua azienda per valutarne i punti di forza e i punti di
           debolezza. <br>Successivamente
           svilupperemo un'idea grafica in modo che sia la risposta più efficace alla digitalizzazione della tua
           azienda. Il tuo sito web deve corrispondere al 100% all'immagine reale della tua azienda.<br><br>
           Ogni progetto realizzato e ogni startegia di marketing che verrà adottata sarà <b>misurabile per poter avere
-          sotto controllo
-          tutti i dati che ci permettono di ottenere il tuo successo sul web.</b><br><br>
-          Realizzeremo il tuo sito web, ecommerce o gestionale a regola d'arte e con le <b>migliori tecnologie presenti sul
-          mercato</b> in modo che risponda
+            sotto controllo
+            tutti i dati che ci permettono di ottenere il tuo successo sul web.</b><br><br>
+          Realizzeremo il tuo sito web, ecommerce o gestionale a regola d'arte e con le <b>migliori tecnologie presenti
+            sul
+            mercato</b> in modo che risponda
           alle necessità del giorno d'oggi quali velocità e facilità di navigazione.
         </p>
       </div>
@@ -234,12 +238,17 @@
         <hr><br>
         <img class="image-cms" src="img/cms.png"><br><br>
         <p class="text-home">
-          Wave Manager è il <b>CMS proprietario della nostra Web Agency a Verona</b>, realizzato interamente da noi con le migliori tecnologie
+          Wave Manager è il <b>CMS proprietario della nostra Web Agency a Verona</b>, realizzato interamente da noi con
+          le migliori tecnologie
           e personalizzabile al 100% a seconda delle esigenze dell'azienda. <br><br>
-          Con il nostro CMS, i nostri clienti potranno modificare autonomamente il testo nelle pagine, inserire news, novità, immagini ecc.<br><br>
-          E' realizzato in modo da rendere il sito performante intermini di velocità e ottimizzato per rendere facile l'inserimento e la modifica
-          dei meta-tag per favorirne un <b>migliore posizionamento e indicizzazione sui motori di ricerca come Google e Bing.</b><br><br>
-          Attraverso un pannello presente nella dashboard è possibile inoltre controllare e monitorare in modo facile e veloce il numero di visite al sito
+          Con il nostro CMS, i nostri clienti potranno modificare autonomamente il testo nelle pagine, inserire news,
+          novità, immagini ecc.<br><br>
+          E' realizzato in modo da rendere il sito performante intermini di velocità e ottimizzato per rendere facile
+          l'inserimento e la modifica
+          dei meta-tag per favorirne un <b>migliore posizionamento e indicizzazione sui motori di ricerca come Google e
+            Bing.</b><br><br>
+          Attraverso un pannello presente nella dashboard è possibile inoltre controllare e monitorare in modo facile e
+          veloce il numero di visite al sito
           e poter vedere i messaggi inviati attraverso il form contatti del sito.<br><br>
         </p>
         <div class="row">
@@ -259,57 +268,143 @@
         <h3 class="text-muted text-center">Quanto costa fare un sito web?</h3>
         <p class="text-home">
           E' una delle domande che sentiamo più spesso e la risposta è... dipende.<br>
-          Ci sono moltissime cose da valutare: la complessità, il numero di pagine, l'inserimento di un blog ecc.<br><br>
-          Affidati alla nostra Web Agency, chiedici gratuitamente un preventivo per la realizzazione del tuo sito web o del tuo e-commerce.
+          Ci sono moltissime cose da valutare: la complessità, il numero di pagine, l'inserimento di un blog
+          ecc.<br><br>
+          Affidati alla nostra Web Agency, chiedici gratuitamente un preventivo per la realizzazione del tuo sito web o
+          del tuo e-commerce.
         </p><br><br>
       </div>
     </div>
-    </section>
+  </section>
 
-    <section class="">
-      <h3 class="text-center text-muted"><i>RAFFORZA IL TUO BRAND CON UNA GRANDE PRESENZA DIGITALE</i></h3>
-    </section>
+  <section class="">
+    <h3 class="text-center text-muted"><i>RAFFORZA IL TUO BRAND CON UNA GRANDE PRESENZA DIGITALE</i></h3>
+  </section>
 
-    <!--SEZIONE CONTATTACI -->
+  <!--SEZIONE CONTATTACI -->
 
-    <section class="features" id="contact">
-      <div class="container">
-        <div class="section-heading text-center">
-          <h2>Condividi con noi la tua idea</h2>
-          <p class="text-muted">Parlaci della tua azienda e richiedici una consulenza gratuita</p>
-          <hr>
-        </div>
-        <div class="col-lg-12 my-auto">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-lg-6">
-                <div class="feature-item">
-                  <i class="icon-call-out text-primary"></i>
-                  <h3><a href="tel:+393486983468">+39 348 6983468</a></h3>
-                </div>
+  <section class="features" id="contact">
+    <div class="container">
+      <div class="section-heading text-center">
+        <h2>Condividi con noi la tua idea</h2>
+        <p class="text-muted">Parlaci della tua azienda e richiedici una consulenza gratuita</p>
+        <hr>
+      </div>
+      <div class="col-lg-12 my-auto">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="feature-item">
+                <i class="icon-call-out text-primary"></i>
+                <h3><a href="tel:+393486983468">+39 348 6983468</a></h3>
               </div>
-              <div class="col-lg-6">
-                <div class="feature-item">
-                  <i class="icon-envelope text-primary"></i>
-                  <h3><a href="mailto:info@wavedigital.it ">info@wavedigital.it</a></h3>
-                </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="feature-item">
+                <i class="icon-envelope text-primary"></i>
+                <h3><a href="mailto:info@wavedigital.it ">info@wavedigital.it</a></h3>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <div class="container text-center">
-      <span>Copyright &copy; Wave Digital 2020 - <a href="/privacy/">Policy privacy</a></span>
     </div>
+  </section>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-    <!-- Custom scripts for this template -->
-    <script src="js/new-age.min.js"></script>
+  <!-- Footer -->
+  <footer class="page-footer font-small blue pt-4">
+
+    <!-- Footer Links -->
+    <div class="container-fluid text-center text-md-left">
+
+      <!-- Grid row -->
+      <div class="row">
+
+        <!-- Grid column -->
+        <div class="col-md-6 mt-md-0 mt-3">
+
+          <!-- Content -->
+          <h5 class="text-uppercase">WEB AGENCY VERONA - WAVE DIGITAL</h5>
+          <p>Contattaci per un preventivo gratuito</p><br>
+          <h5><a href="tel:+393486983468">+39 348 6983468</a></h5>
+          <h5><a href="mailto:info@wavedigital.it ">info@wavedigital.it</a></h5>
+
+        </div>
+        <!-- Grid column -->
+
+        <hr class="clearfix w-100 d-md-none pb-3">
+
+        <!-- Grid column -->
+        <div class="col-md-3 mb-md-0 mb-3">
+
+          <!-- Links -->
+          <h5 class="text-uppercase">Servizi</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <a href="/siti-internet-verona/">Siti Internet Verona</a>
+            </li>
+            <li>
+              <a href="/seo-agency-verona/">SEO Agency Verona</a>
+            </li>
+            <li>
+              <a href="/web-marketing-verona/">Web Marketing Verona</a>
+            </li>
+            <li>
+              <a href="/">Web Agency Verona</a>
+            </li>
+          </ul>
+
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 mb-md-0 mb-3">
+
+          <!-- Links -->
+          <h5 class="text-uppercase">Servizi</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!">Campagne Google ADS Verona</a>
+            </li>
+            <li>
+              <a href="#!">Facebook ADS Verona</a>
+            </li>
+            <li>
+              <a href="#!">Creazione siti per B&B</a>
+            </li>
+            <li>
+              <a href="#!">Creazione siti per Ristoranti</a>
+            </li>
+          </ul>
+
+        </div>
+        <!-- Grid column -->
+
+      </div>
+      <!-- Grid row -->
+
+    </div>
+    <!-- Footer Links -->
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+      <a href="https://wavedigital.it"> Web Agency Verona</a> - Wave Digital
+    </div>
+    <!-- Copyright -->
+
+  </footer>
+  <!-- Footer -->
+
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- Custom scripts for this template -->
+  <script src="js/new-age.min.js"></script>
 </body>
 
 </html>
