fix footer e script

--- a/seo-agency-verona/index.html
+++ b/seo-agency-verona/index.html
@@ -6,7 +6,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157587155-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-157587155-1');
@@ -15,11 +15,9 @@
 
   <meta charset="UTF-8">
   <title>SEO Agency Verona| Posizionamento SEO | Wave Digital</title>
-  <meta name="description"
-    content="Wave Digital" />
+  <meta name="description" content="Wave Digital" />
   <meta property="og:title" content="SEO Agency Verona| Posizionamento SEO | Wave Digital" />
-  <meta property="og:description"
-    content="Wave Digital" />
+  <meta property="og:description" content="Wave Digital" />
   <meta property="og:image" content="../../img/logo_fb.png" />
   <meta property="og:image:type" content="../image/png" />
   <meta property="og:image:width" content="400" />
@@ -150,14 +148,17 @@
         <h2 class="text-center">SEO Agency Verona</h2><br>
         <p class="text-home">
           Wave Digital, la SEO agency a Verona per posizionale al meglio il tuo sito web sui motori di ricerca.<br><br>
-          Raccontaci la tua azienda, spiegaci di cosa ti occupi e quali risultati vuoi raggiungere. Un nostro consulente SEO individuerà insieme ù
+          Raccontaci la tua azienda, spiegaci di cosa ti occupi e quali risultati vuoi raggiungere. Un nostro consulente
+          SEO individuerà insieme ù
           a te la strategia che più si adatta al caso tuo. <br><br>
-          <b>Fatti trovare da molti nuovi potenziali clienti interessati ai tuoi prodotti o servizi! Aumenta ora i tuoi affari!</b>
+          <b>Fatti trovare da molti nuovi potenziali clienti interessati ai tuoi prodotti o servizi! Aumenta ora i tuoi
+            affari!</b>
         </p><br><br>
         <h2 class="text-center">I nostri servizi - SEO Agency Verona</h2><br>
         <p class="text-home">
           <b>- Keyword Research</b><br>
-          Ricerchiamo le migliori parole chiave, più cercate dai tuoi potenziali clienti, relative al tuo business<br><br>
+          Ricerchiamo le migliori parole chiave, più cercate dai tuoi potenziali clienti, relative al tuo
+          business<br><br>
           <b>- Content Optimization</b><br><br>
           <b>- Technical SEO</b><br><br>
           <b>- Link Building</b><br><br>
@@ -168,41 +169,38 @@
     </div>
   </section>
 
-  
-    <!--SEZIONE CONTATTACI -->
 
-    <section class="features" id="contact">
-      <div class="container">
-        <div class="section-heading text-center">
-          <h2>Contattaci</h2>
-          <p class="text-muted">Per un preventivo o per una consulenza gratuita</p>
-          <hr>
-        </div>
-        <div class="col-lg-12 my-auto">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-lg-6">
-                <div class="feature-item">
-                  <i class="icon-call-out text-primary"></i>
-                  <h3><a href="tel:+393486983468">+39 348 6983468</a></h3>
-                </div>
+  <!--SEZIONE CONTATTACI -->
+
+  <section class="features" id="contact">
+    <div class="container">
+      <div class="section-heading text-center">
+        <h2>Contattaci</h2>
+        <p class="text-muted">Per un preventivo o per una consulenza gratuita</p>
+        <hr>
+      </div>
+      <div class="col-lg-12 my-auto">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="feature-item">
+                <i class="icon-call-out text-primary"></i>
+                <h3><a href="tel:+393486983468">+39 348 6983468</a></h3>
               </div>
-              <div class="col-lg-6">
-                <div class="feature-item">
-                  <i class="icon-envelope text-primary"></i>
-                  <h3><a href="mailto:info@wavedigital.it ">info@wavedigital.it</a></h3>
-                </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="feature-item">
+                <i class="icon-envelope text-primary"></i>
+                <h3><a href="mailto:info@wavedigital.it ">info@wavedigital.it</a></h3>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <div class="container text-center">
-      <span>Copyright &copy; Wave Digital 2020 - <a href="/privacy/">Policy privacy</a></span>
     </div>
+  </section>
 
-    <!-- Footer -->
+  <!-- Footer -->
   <footer class="page-footer font-small blue pt-4">
 
     <!-- Footer Links -->
@@ -288,12 +286,13 @@
   </footer>
   <!-- Footer -->
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-    <!-- Custom scripts for this template -->
-    <script src="js/new-age.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="../vendor/jquery/jquery.min.js"></script>
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Plugin JavaScript -->
+  <script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- Custom scripts for this template -->
+  <script src="../js/new-age.min.js"></script>
 </body>
+
 </html>
