--- a/web-marketing-verona/index.html
+++ b/web-marketing-verona/index.html
@@ -6,7 +6,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157587155-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-157587155-1');
@@ -15,11 +15,9 @@
 
   <meta charset="UTF-8">
   <title>Web Marketing Verona | Digital Agency | Wave Digital</title>
-  <meta name="description"
-    content="Wave Digital" />
+  <meta name="description" content="Wave Digital" />
   <meta property="og:title" content="Web Marketing Verona | Digital Agency | Wave Digital" />
-  <meta property="og:description"
-    content="Wave Digital" />
+  <meta property="og:description" content="Wave Digital" />
   <meta property="og:image" content="../../img/logo_fb.png" />
   <meta property="og:image:type" content="../image/png" />
   <meta property="og:image:width" content="400" />
@@ -120,7 +118,8 @@
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">Affidati a noi per la gestione del Web Marketing!<br>Scegli la nostra Web Agency a Verona!</h1>
+            <h1 class="mb-5">Affidati a noi per la gestione del Web Marketing!<br>Scegli la nostra Web Agency a Verona!
+            </h1>
             <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Richiedi ora un'analisi gratutita del
               tuo sito web!</a>
           </div>
@@ -144,40 +143,37 @@
     </div>
   </header>
 
-    <!--SEZIONE CONTATTACI -->
+  <!--SEZIONE CONTATTACI -->
 
-    <section class="features" id="contact">
-      <div class="container">
-        <div class="section-heading text-center">
-          <h2>Contattaci</h2>
-          <p class="text-muted">Per un preventivo o per una consulenza gratuita</p>
-          <hr>
-        </div>
-        <div class="col-lg-12 my-auto">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-lg-6">
-                <div class="feature-item">
-                  <i class="icon-call-out text-primary"></i>
-                  <h3><a href="tel:+393486983468">+39 348 6983468</a></h3>
-                </div>
+  <section class="features" id="contact">
+    <div class="container">
+      <div class="section-heading text-center">
+        <h2>Contattaci</h2>
+        <p class="text-muted">Per un preventivo o per una consulenza gratuita</p>
+        <hr>
+      </div>
+      <div class="col-lg-12 my-auto">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="feature-item">
+                <i class="icon-call-out text-primary"></i>
+                <h3><a href="tel:+393486983468">+39 348 6983468</a></h3>
               </div>
-              <div class="col-lg-6">
-                <div class="feature-item">
-                  <i class="icon-envelope text-primary"></i>
-                  <h3><a href="mailto:info@wavedigital.it ">info@wavedigital.it</a></h3>
-                </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="feature-item">
+                <i class="icon-envelope text-primary"></i>
+                <h3><a href="mailto:info@wavedigital.it ">info@wavedigital.it</a></h3>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <div class="container text-center">
-      <span>Copyright &copy; Wave Digital 2020 - <a href="/privacy/">Policy privacy</a></span>
     </div>
+  </section>
 
-    <!-- Footer -->
+  <!-- Footer -->
   <footer class="page-footer font-small blue pt-4">
 
     <!-- Footer Links -->
@@ -263,12 +259,13 @@
   </footer>
   <!-- Footer -->
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-    <!-- Custom scripts for this template -->
-    <script src="js/new-age.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="../vendor/jquery/jquery.min.js"></script>
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Plugin JavaScript -->
+  <script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- Custom scripts for this template -->
+  <script src="../js/new-age.min.js"></script>
 </body>
+
 </html>
