--- a/siti-internet-verona/index.html
+++ b/siti-internet-verona/index.html
@@ -6,7 +6,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157587155-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-157587155-1');
@@ -15,11 +15,9 @@
 
   <meta charset="UTF-8">
   <title>Siti Internet Verona | Creazione Siti Web | Wave Digital</title>
-  <meta name="description"
-    content="Wave Digital" />
+  <meta name="description" content="Wave Digital" />
   <meta property="og:title" content="Siti Internet Verona | Creazione Siti Web | Wave Digital" />
-  <meta property="og:description"
-    content="Wave Digital" />
+  <meta property="og:description" content="Wave Digital" />
   <meta property="og:image" content="../../img/logo_fb.png" />
   <meta property="og:image:type" content="../image/png" />
   <meta property="og:image:width" content="400" />
@@ -148,61 +146,70 @@
     <div class="container">
       <div class="section-heading">
         <h2 class="text-center">Creazione di Siti Internet Verona</h2><br>
-        <p class="text-home">Siamo tra le <b>migliori web agency a Verona per la creazione di siti web</b> moderni, veloci ed affidabili con elevata qualità professionale. <br><br>
-          Siamo un Team di giovani professionisti che lavorano da sempre nel digitale. <b>Cerchiamo di valorizzare al meglio la tua attività</b> e la tua presenza online con  un sito web che rispecchi al meglio la tua immagine coordinata. <br><br>          
-          Per poter creare un sito web professionale e di qualità occorre tener presente molti aspetti importanti e seguire il progetto in tutte in diverse fasi. Nel nostro team ogni professionista è specializzato in ogni fase di creazione: Grafica, Sviluppo, Posizionamento e Marketing.
+        <p class="text-home">Siamo tra le <b>migliori web agency a Verona per la creazione di siti web</b> moderni,
+          veloci ed affidabili con elevata qualità professionale. <br><br>
+          Siamo un Team di giovani professionisti che lavorano da sempre nel digitale. <b>Cerchiamo di valorizzare al
+            meglio la tua attività</b> e la tua presenza online con un sito web che rispecchi al meglio la tua immagine
+          coordinata. <br><br>
+          Per poter creare un sito web professionale e di qualità occorre tener presente molti aspetti importanti e
+          seguire il progetto in tutte in diverse fasi. Nel nostro team ogni professionista è specializzato in ogni fase
+          di creazione: Grafica, Sviluppo, Posizionamento e Marketing.
           <br><br><span class="">Un sito non deve essere solo bello, deve convertire!</span><br><br>
-          Cosa significa convertire? Significa che già dallo sviluppo della grafica occorre tener presente della user friendly e dell'ottimizzazione del nostro obiettivo ovvero acquisire un contatto, una richiesta di preventivo, una vendita ecc.
-          <br><br>Per user friendly significa ottimizzare il sito per renderlo il più facile possibile da leggere e navigare. Un potenziale cliente che entra nel nostro sito deve riuscire a trovare nel minor tempo possibile quello che gli interessa e deve completare il nostro obiettivo.
+          Cosa significa convertire? Significa che già dallo sviluppo della grafica occorre tener presente della user
+          friendly e dell'ottimizzazione del nostro obiettivo ovvero acquisire un contatto, una richiesta di preventivo,
+          una vendita ecc.
+          <br><br>Per user friendly significa ottimizzare il sito per renderlo il più facile possibile da leggere e
+          navigare. Un potenziale cliente che entra nel nostro sito deve riuscire a trovare nel minor tempo possibile
+          quello che gli interessa e deve completare il nostro obiettivo.
           <br><br><b>Gli aspetti da considerare per un buon sito:</b>
           <br><br><b>- Ottimizzato per i dispositivi mobile</b>
-          <br>Al giorno d'oggi il 68% delle ricerche avviene da mobile ed è fondamentale che il nostro sito sia ottimizzato correttamente
+          <br>Al giorno d'oggi il 68% delle ricerche avviene da mobile ed è fondamentale che il nostro sito sia
+          ottimizzato correttamente
           <br><br><b>- Ottimizzato per l'indicizzazione sui motori di ricerca</b>
-          <br> Occorre seguire il sito in tutti gli aspetti per l'ottimizzaizone per i motori di ricerca come Google e Bing; ottimizzare i metatag, le immagini, i testi ecc
+          <br> Occorre seguire il sito in tutti gli aspetti per l'ottimizzaizone per i motori di ricerca come Google e
+          Bing; ottimizzare i metatag, le immagini, i testi ecc
           <br><br><b>- Rispecchiare al meglio l'identità aziendale</b>
           <br> Un sito ben fatto dovrebbe riportare al meglio la tua identià aziendale reale e migliorarla
           <br><br><b>- Facile da gestire e mantenere</b>
-          <br>Molto importante è la facilità con il quale è possibile mantenere aggiornato un sito; inserire news, immagini, modificare testi ecc.
+          <br>Molto importante è la facilità con il quale è possibile mantenere aggiornato un sito; inserire news,
+          immagini, modificare testi ecc.
         </p><br><br><br>
         <h2 class="text-center">Richiedici Gratuitamente un'analisi del tuo sito</h2><br>
       </div>
     </div>
   </section>
 
-    <!--SEZIONE CONTATTACI -->
+  <!--SEZIONE CONTATTACI -->
 
-    <section class="features" id="contact">
-      <div class="container">
-        <div class="section-heading text-center">
-          <h2>Contattaci</h2>
-          <p class="text-muted">Per un preventivo o per una consulenza gratuita</p>
-          <hr>
-        </div>
-        <div class="col-lg-12 my-auto">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-lg-6">
-                <div class="feature-item">
-                  <i class="icon-call-out text-primary"></i>
-                  <h3><a href="tel:+393486983468">+39 348 6983468</a></h3>
-                </div>
+  <section class="features" id="contact">
+    <div class="container">
+      <div class="section-heading text-center">
+        <h2>Contattaci</h2>
+        <p class="text-muted">Per un preventivo o per una consulenza gratuita</p>
+        <hr>
+      </div>
+      <div class="col-lg-12 my-auto">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="feature-item">
+                <i class="icon-call-out text-primary"></i>
+                <h3><a href="tel:+393486983468">+39 348 6983468</a></h3>
               </div>
-              <div class="col-lg-6">
-                <div class="feature-item">
-                  <i class="icon-envelope text-primary"></i>
-                  <h3><a href="mailto:info@wavedigital.it ">info@wavedigital.it</a></h3>
-                </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="feature-item">
+                <i class="icon-envelope text-primary"></i>
+                <h3><a href="mailto:info@wavedigital.it ">info@wavedigital.it</a></h3>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <div class="container text-center">
-      <span>Copyright &copy; Wave Digital 2020 - <a href="/privacy/">Policy privacy</a></span>
     </div>
+  </section>
 
-    <!-- Footer -->
+  <!-- Footer -->
   <footer class="page-footer font-small blue pt-4">
 
     <!-- Footer Links -->
@@ -288,12 +295,13 @@
   </footer>
   <!-- Footer -->
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-    <!-- Custom scripts for this template -->
-    <script src="js/new-age.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="../vendor/jquery/jquery.min.js"></script>
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Plugin JavaScript -->
+  <script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- Custom scripts for this template -->
+  <script src="../js/new-age.min.js"></script>
 </body>
+
 </html>
