--- a/seo-agency-verona/index.html
+++ b/seo-agency-verona/index.html
@@ -15,9 +15,9 @@
 
   <meta charset="UTF-8">
   <title>SEO Agency Verona| Posizionamento SEO | Wave Digital</title>
-  <meta name="description" content="Wave Digital" />
+  <meta name="description" content="Siamo una delle migliori SEO Agency a Verona e provincia. Ci occupiamo di posizionare il tuo sito sui motori di ricerca come Google e Bing. Contattaci!" />
   <meta property="og:title" content="SEO Agency Verona| Posizionamento SEO | Wave Digital" />
-  <meta property="og:description" content="Wave Digital" />
+  <meta property="og:description" content="Siamo una delle migliori SEO Agency a Verona e provincia. Ci occupiamo di posizionare il tuo sito sui motori di ricerca come Google e Bing. Contattaci!" />
   <meta property="og:image" content="../../img/logo_fb.png" />
   <meta property="og:image:type" content="../image/png" />
   <meta property="og:image:width" content="400" />
