--- a/web-marketing-verona/index.html
+++ b/web-marketing-verona/index.html
@@ -15,9 +15,9 @@
 
   <meta charset="UTF-8">
   <title>Web Marketing Verona | Digital Agency | Wave Digital</title>
-  <meta name="description" content="Wave Digital" />
+  <meta name="description" content="Siamo la migliore Web Agency a Verona di web marketing. Ci occupiamo della creazione di campagne Google ADS, Facebook, newsletter ecc. Studieremo insieme la migliore strategia per la tua azienda. Contattaci!" />
   <meta property="og:title" content="Web Marketing Verona | Digital Agency | Wave Digital" />
-  <meta property="og:description" content="Wave Digital" />
+  <meta property="og:description" content="Siamo la migliore Web Agency a Verona di web marketing. Ci occupiamo della creazione di campagne Google ADS, Facebook, newsletter ecc. Studieremo insieme la migliore strategia per la tua azienda. Contattaci!" />
   <meta property="og:image" content="../../img/logo_fb.png" />
   <meta property="og:image:type" content="../image/png" />
   <meta property="og:image:width" content="400" />
