--- a/siti-internet-verona/index.html
+++ b/siti-internet-verona/index.html
@@ -15,9 +15,9 @@
 
   <meta charset="UTF-8">
   <title>Siti Internet Verona | Creazione Siti Web | Wave Digital</title>
-  <meta name="description" content="Wave Digital" />
+  <meta name="description" content="Ci occupiamo di creare Siti Internet a Verona e provincia. Realizziamo siti ottimizzati per i dispositivi mobile e per il posizionamento organico. Contattaci!" />
   <meta property="og:title" content="Siti Internet Verona | Creazione Siti Web | Wave Digital" />
-  <meta property="og:description" content="Wave Digital" />
+  <meta property="og:description" content="Ci occupiamo di creare Siti Internet a Verona e provincia. Realizziamo siti ottimizzati per i dispositivi mobile e per il posizionamento organico. Contattaci!" />
   <meta property="og:image" content="../../img/logo_fb.png" />
   <meta property="og:image:type" content="../image/png" />
   <meta property="og:image:width" content="400" />
