Aggiunta testi web marketing

--- a/seo-agency-verona/index.html
+++ b/seo-agency-verona/index.html
@@ -159,9 +159,12 @@
           <b>- Keyword Research</b><br>
           Ricerchiamo le migliori parole chiave, più cercate dai tuoi potenziali clienti, relative al tuo
           business<br><br>
-          <b>- Content Optimization</b><br><br>
-          <b>- Technical SEO</b><br><br>
-          <b>- Link Building</b><br><br>
+          <b>- Content Optimization</b><br>
+          Ottimizzazione dei testi e dei contenuti della pagina in ottica SEO<br><br>
+          <b>- Technical SEO</b><br>
+          Ottimizzazione dei tempi di caricamento e delle performance del tuo sito web<br><br>
+          <b>- Link Building</b><br>
+          Attività che permettono di ottenere link di valore da altri siti web come blog o portali di settore<br><br>
         </p>
 
         <h2 class="text-center">Richiedici Gratuitamente un'analisi del tuo sito</h2><br>
