--- a/web-marketing-verona/index.html
+++ b/web-marketing-verona/index.html
@@ -15,9 +15,11 @@
 
   <meta charset="UTF-8">
   <title>Web Marketing Verona | Digital Agency | Wave Digital</title>
-  <meta name="description" content="Siamo la migliore Web Agency a Verona di web marketing. Ci occupiamo della creazione di campagne Google ADS, Facebook, newsletter ecc. Studieremo insieme la migliore strategia per la tua azienda. Contattaci!" />
+  <meta name="description"
+    content="Siamo la migliore Web Agency a Verona di web marketing. Ci occupiamo della creazione di campagne Google ADS, Facebook, newsletter ecc. Studieremo insieme la migliore strategia per la tua azienda. Contattaci!" />
   <meta property="og:title" content="Web Marketing Verona | Digital Agency | Wave Digital" />
-  <meta property="og:description" content="Siamo la migliore Web Agency a Verona di web marketing. Ci occupiamo della creazione di campagne Google ADS, Facebook, newsletter ecc. Studieremo insieme la migliore strategia per la tua azienda. Contattaci!" />
+  <meta property="og:description"
+    content="Siamo la migliore Web Agency a Verona di web marketing. Ci occupiamo della creazione di campagne Google ADS, Facebook, newsletter ecc. Studieremo insieme la migliore strategia per la tua azienda. Contattaci!" />
   <meta property="og:image" content="../../img/logo_fb.png" />
   <meta property="og:image:type" content="../image/png" />
   <meta property="og:image:width" content="400" />
@@ -142,6 +144,60 @@
       </div>
     </div>
   </header>
+
+  <section class="features" id="features">
+    <div class="container">
+      <div class="section-heading">
+        <h2 class="text-center">Web Marketing Verona</h2><br>
+        <p class="text-home">
+          Siamo tra le migliori Web Agency a Verona che si occupano di Marketing. Ogni nuovo progetto nasce da un'attenta analisi della tua azienda
+          , insieme valuteremo e stabiliremo gli obiettivi da raggiungere. Insieme studieremo al meglio la strategia che fa per te.
+          <br><br>Ogni centesimo speso in pubblicità sul web deve trasformarsi in fatturato per la tua azienda!<br><br>
+          Esisitono diverse tipologie di soluzioni e di campagne che si possono adottare ma il bello di fare pubblicità sul web è che si possono raggiungere 
+          migliaia di persone in modo facile e veloce e... ricorda, OGNI INVESTIMENTO SUL WEB E' MISURABILE!<br><br>
+          A differenza di un volantino o di un manifesto per strada, noi sappiamo alla perfezione i risultati che porta ogni campagna!
+
+        </p><br><br>
+        <h2 class="text-center">Facebook & Instagram ADS</h2><br>
+        <div class="row">
+          <div class="col-6">
+            <p>Fare pubblicità su Facebok è uno dei migliori modi di pubblicizzare la propria attività. Più
+              di due miliardi di persone utilizzano Facebook ogni giorno. Grazie ad una targhetizzazione dettagliata,
+              potrai raggiungere in modo sicuro e facile migliaia di persone interessate alla tua attività. <br><br>
+              Qualunque sia il pubblico che desideri raggiungere, con Facebook lo trovi molto facilmente!<br><br>
+              Analizzeremo insieme la tua attività e svilupperemo insieme a te la migliore strategia per raggiungere i  migliori
+              risultati.<br>
+              Ogni anno spendiamo migliaia di euro in budget per i nostri clienti ed è l'esperienza a parlare per noi.<br><br>
+              Contattaci subito, faremo una chiacchierata gratuita e senza impegno!
+            </p>
+          </div>
+          <div class="col-6">
+            <img class="image-cms" src="../img/facebook-ads.jpg"><br><br>
+          </div>
+
+        </div><br><br>
+
+        <h2 class="text-center">Google ADS</h2><br>
+        <div class="row">
+          <div class="col-6">
+            <p>Attraverso le campagne Google ADS potrai farti trovare dai clienti che crcano attività come la tua.<br>
+            Pagherai soltanto se cliccano sul tuo sito web o se chiamano la tua attività. Un annuncio al momento giusto e nel posto giusto
+            può convertire moltissimi utenti in clienti.<br><br>
+            Con le campagne Google ADS potrai Incrementare le visite al tuo sito web con traffico di qualità ed in terget, 
+            ricevere più telefonate e aumentare le visite in negozio con annunci che aiutano gli utenti a scoprire la tua attività. 
+            <br><br>
+          
+          </p>
+          </div>
+          <div class="col-6">
+            <img class="image-cms" src="../img/google-ads.jpg"><br><br>
+          </div>
+        </div><br><br><br>
+        <h2 class="text-center">Raggiungi i tuoi obiettivi più importanti, Contattaci!</h2><br>
+
+      </div>
+    </div>
+  </section>
 
   <!--SEZIONE CONTATTACI -->
 
