--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <meta property="og:title" content="Wave Digital - Web Agency Verona - Siti Internet Verona" />
   <meta property="og:description"
     content="Web agency Verona Wave Digital. Specialisti nello svulippo di siti web, web marketing e studio grafico. Contattaci per una consulenza gratuita." />
+  <meta name="keywords" content="Web Agency Verona, sviluppo siti web, siti internet, web marketing" />
   <meta property="og:image" content="../img/logo_fb.png" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="400" />
@@ -43,6 +44,7 @@
   <link rel="dns-prefetch" href="//cdn.fontawesome.com">
 
   <meta name="author" content="Wave Digital - Web Agency Verona">
+  <link rel="canonical" href="https://www.wavedigital.it" />
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
