--- a/siti-internet-verona/index.html
+++ b/siti-internet-verona/index.html
@@ -16,6 +16,7 @@
   <meta charset="UTF-8">
   <title>Siti Internet Verona | Creazione Siti Web | Wave Digital</title>
   <meta name="description" content="Ci occupiamo di creare Siti Internet a Verona e provincia. Realizziamo siti ottimizzati per i dispositivi mobile e per il posizionamento organico. Contattaci!" />
+  <meta name="keywords" content="Siti Internet Verona, creazione siti internet, siti web, cms proprietario" />
   <meta property="og:title" content="Siti Internet Verona | Creazione Siti Web | Wave Digital" />
   <meta property="og:description" content="Ci occupiamo di creare Siti Internet a Verona e provincia. Realizziamo siti ottimizzati per i dispositivi mobile e per il posizionamento organico. Contattaci!" />
   <meta property="og:image" content="../../img/logo_fb.png" />
