--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <meta charset="UTF-8">
   <title>Wave Digital - Web Agency Verona - Siti Internet Verona</title>
   <meta name="description"
-    content="Web agency Verona Wave Digital. Specialisti nello svulippo di siti web, web marketing e studio grafico. Contattaci per una consulenza gratuita." />
+    content="Web agency Verona, Wave Digital. Specialisti nello sviluppo di siti web, web marketing e studio grafico. Contattaci per una consulenza e un preventivo gratuito." />
   <meta property="og:title" content="Wave Digital - Web Agency Verona - Siti Internet Verona" />
   <meta property="og:description"
-    content="Web agency Verona Wave Digital. Specialisti nello svulippo di siti web, web marketing e studio grafico. Contattaci per una consulenza gratuita." />
+    content="Web agency Verona Wave Digital. Specialisti nello sviluppo di siti web, web marketing e studio grafico. Contattaci per una consulenza gratuita." />
   <meta name="keywords" content="Web Agency Verona, sviluppo siti web, siti internet, web marketing" />
   <meta property="og:image" content="../img/logo_fb.png" />
   <meta property="og:image:type" content="image/png" />
@@ -121,7 +121,7 @@
       <div class="row h-100">
         <div class="col-lg-12 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">Fai decollare la tua azienda!<br>Scegli la nostra Web Agency a Verona!</h1>
+            <h1 class="mb-5">Scegli la nostra Web Agency a Verona!<br>Fai decollare la tua azienda!</h1>
             <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Richiedi ora un'analisi gratutita del
               tuo sito web!</a>
           </div>
@@ -172,7 +172,7 @@
         </p>
       </div>
       <div class="section-heading text-center">
-        <h3 class="text-muted">I servizi della nostra Web Agency:</h3>
+        <h3 class="text-muted">I servizi della nostra Web Agency a Verona:</h3>
         <hr>
       </div>
       <div class="col-lg-12 my-auto">
@@ -236,9 +236,9 @@
     <!-- -->
     <div class="container">
       <div class="section-heading">
-        <h2 class="text-center">Il CMS della nostra Web Agency</h2>
+        <h2 class="text-center">Il CMS della nostra Web Agency a Verona</h2>
         <hr><br>
-        <img class="image-cms" src="img/cms.png"><br><br>
+        <img class="image-cms" src="img/cms.png" title="cms proprietario della web agency a Verona Wave Digital" alt="cms proprietario della web agency a Verona Wave Digital"><br><br>
         <p class="text-home">
           Wave Manager è il <b>CMS proprietario della nostra Web Agency a Verona</b>, realizzato interamente da noi con
           le migliori tecnologie
@@ -257,12 +257,12 @@
           <div class="col-lg-2"></div>
           <div class="col-lg-4">
             <div class="feature-item">
-              <img class="img-cms" src="img/node.png">
+              <img class="img-cms" src="img/node.png" alt="cms realizzato con node js" title="cms realizzato con node js">
             </div>
           </div>
           <div class="col-lg-4">
             <div class="feature-item">
-              <img class="img-cms" src="img/html-css.png">
+              <img class="img-cms" src="img/html-css.png" alt="cms realizzato con html5 e css3" title="cms realizzato con html5 e css3">
             </div>
           </div>
           <div class="col-lg-2"></div>
@@ -272,7 +272,7 @@
           E' una delle domande che sentiamo più spesso e la risposta è... dipende.<br>
           Ci sono moltissime cose da valutare: la complessità, il numero di pagine, l'inserimento di un blog
           ecc.<br><br>
-          Affidati alla nostra Web Agency, chiedici gratuitamente un preventivo per la realizzazione del tuo sito web o
+          Affidati alla nostra Web Agency, siamo a Verona, chiedici gratuitamente un preventivo per la realizzazione del tuo sito web o
           del tuo e-commerce.
         </p><br><br>
       </div>
@@ -289,7 +289,7 @@
     <div class="container">
       <div class="section-heading text-center">
         <h2>Condividi con noi la tua idea</h2>
-        <p class="text-muted">Parlaci della tua azienda e richiedici una consulenza gratuita</p>
+        <p class="text-muted">Parlaci della tua azienda e richiedici una consulenza e un preventivo gratuito</p>
         <hr>
       </div>
       <div class="col-lg-12 my-auto">
@@ -364,20 +364,23 @@
         <div class="col-md-3 mb-md-0 mb-3">
 
           <!-- Links -->
-          <h5 class="text-uppercase">Servizi</h5>
+          <h5 class="text-uppercase"></h5>
 
           <ul class="list-unstyled">
             <li>
-              <a href="#!">Campagne Google ADS Verona</a>
+              <a href="/web-marketing-verona/">Campagne Google ADS Verona</a>
             </li>
             <li>
-              <a href="#!">Facebook ADS Verona</a>
+              <a href="/web-marketing-verona/">Facebook ADS Verona</a>
             </li>
             <li>
-              <a href="#!">Creazione siti per B&B</a>
+              <a href="/siti-internet-verona/">Creazione siti per B&B</a>
             </li>
             <li>
-              <a href="#!">Creazione siti per Ristoranti</a>
+              <a href="/siti-internet-verona/">Creazione siti per Ristoranti</a>
+            </li>
+            <li>
+              <a href="/siti-internet-verona/">Creazione siti per Pizzerie</a>
             </li>
           </ul>
 
