--- a/seo-agency-verona/index.html
+++ b/seo-agency-verona/index.html
@@ -16,6 +16,7 @@
   <meta charset="UTF-8">
   <title>SEO Agency Verona| Posizionamento SEO | Wave Digital</title>
   <meta name="description" content="Siamo una delle migliori SEO Agency a Verona e provincia. Ci occupiamo di posizionare il tuo sito sui motori di ricerca come Google e Bing. Contattaci!" />
+  <meta name="keywords" content="SEO agency Verona, posizionamento sito web, posizionamento organico, agenzia indicizzazione sito web, posizionamento sito web Verona" />
   <meta property="og:title" content="SEO Agency Verona| Posizionamento SEO | Wave Digital" />
   <meta property="og:description" content="Siamo una delle migliori SEO Agency a Verona e provincia. Ci occupiamo di posizionare il tuo sito sui motori di ricerca come Google e Bing. Contattaci!" />
   <meta property="og:image" content="../../img/logo_fb.png" />
