--- a/siti-internet-verona/index.html
+++ b/siti-internet-verona/index.html
@@ -16,7 +16,7 @@
   <meta charset="UTF-8">
   <title>Siti Internet Verona | Creazione Siti Web | Wave Digital</title>
   <meta name="description" content="Ci occupiamo di creare Siti Internet a Verona e provincia. Realizziamo siti ottimizzati per i dispositivi mobile e per il posizionamento organico. Contattaci!" />
-  <meta name="keywords" content="Siti Internet Verona, creazione siti internet, siti web, cms proprietario" />
+  <meta name="keywords" content="Siti Internet Verona, creazione siti internet, siti web, cms proprietario, siti internet per ristoranti, siti internet per b&b, siti internet per pizzerie" />
   <meta property="og:title" content="Siti Internet Verona | Creazione Siti Web | Wave Digital" />
   <meta property="og:description" content="Ci occupiamo di creare Siti Internet a Verona e provincia. Realizziamo siti ottimizzati per i dispositivi mobile e per il posizionamento organico. Contattaci!" />
   <meta property="og:image" content="../../img/logo_fb.png" />
@@ -119,7 +119,7 @@
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">Per sviluppare il tuo sito Internet<br>Scegli la nostra Web Agency a Verona!</h1>
+            <h1 class="mb-5">Realizziamo Siti Internet<br>Scegli la nostra <a href="/">Web Agency a Verona</a>!</h1>
             <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Richiedi ora un'analisi gratutita del
               tuo sito web!</a>
           </div>
@@ -163,10 +163,10 @@
           navigare. Un potenziale cliente che entra nel nostro sito deve riuscire a trovare nel minor tempo possibile
           quello che gli interessa e deve completare il nostro obiettivo.
           <br><br><b>Gli aspetti da considerare per un buon sito:</b>
-          <br><br><b>- Ottimizzato per i dispositivi mobile</b>
+          <br><br><b>- Ottimizzazione sito internet per i dispositivi mobile</b>
           <br>Al giorno d'oggi il 68% delle ricerche avviene da mobile ed è fondamentale che il nostro sito sia
           ottimizzato correttamente
-          <br><br><b>- Ottimizzato per l'indicizzazione sui motori di ricerca</b>
+          <br><br><b>- Ottimizzazione sito internet per l'indicizzazione sui motori di ricerca</b>
           <br> Occorre seguire il sito in tutti gli aspetti per l'ottimizzaizone per i motori di ricerca come Google e
           Bing; ottimizzare i metatag, le immagini, i testi ecc
           <br><br><b>- Rispecchiare al meglio l'identità aziendale</b>
