--- a/web-marketing-verona/index.html
+++ b/web-marketing-verona/index.html
@@ -17,6 +17,7 @@
   <title>Web Marketing Verona | Digital Agency | Wave Digital</title>
   <meta name="description"
     content="Siamo la migliore Web Agency a Verona di web marketing. Ci occupiamo della creazione di campagne Google ADS, Facebook, newsletter ecc. Studieremo insieme la migliore strategia per la tua azienda. Contattaci!" />
+  <meta name="keywords" content="Web marketing Verona, pubblicità su internet Verona, Facebook ADS, Campagne Facebook, pubblicità su Facebook, Google ADS, Campagne Google ADS, pubblicità su Google" />
   <meta property="og:title" content="Web Marketing Verona | Digital Agency | Wave Digital" />
   <meta property="og:description"
     content="Siamo la migliore Web Agency a Verona di web marketing. Ci occupiamo della creazione di campagne Google ADS, Facebook, newsletter ecc. Studieremo insieme la migliore strategia per la tua azienda. Contattaci!" />
